<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_main_item_first_Linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/activity_main_item_imageChip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:contentDescription="@string/ic_description"
            android:paddingStart="1dp"
            android:paddingEnd="0.5dp"
            android:src="@drawable/pastille_10" />

        <LinearLayout
            android:id="@+id/activity_main_Room_Hour_Creater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/activity_main_item_Room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/No_Room_Number"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:text="@string/Reunion_Tiret_TxtView"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_item_day_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/No_Time_Data"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.25"
                    android:gravity="center"
                    android:text="@string/Reunion_Tiret_TxtView"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_main_item_Subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/No_Subject_Data"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/activity_main_participants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/No_Participants_Data"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </HorizontalScrollView>

        </LinearLayout>

        <ImageButton
            android:id="@+id/activity_main_item_garbage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/ic_delete_btn"
            android:gravity="center"
            android:src="@drawable/ic_delete_reu" />
    </LinearLayout>

</RelativeLayout>